css/main.css
/*
 * Copyright (c) 2012-2013 Baptiste Lepers
 * http://www.envadrouille.org
 *
 * Licensed under the MIT License:
 */
#menu-page {
   margin: 0px auto;
   width:80%;
   min-width:1000px;
   padding:30px;
}
.menu-title {
    text-align:center;
    width: 80%;
    margin: -50px auto 10px;
}

.code {
   font-family:"Consolas","Bitstream Vera Sans Mono","Courier New",Courier,monospace;
}

.logo {
   float: left;
    left: 10px;
    position: absolute;
    top: 10px;
    width: 170px;
}

.check {
   width:650px;
   margin:10px auto;
   padding-left:139px;
}
.check2 {
   width:800px;
   margin: 0 auto;
}
.check-small {
   text-align: justify; 
   font-style:italic;
   display:block;
   clear:both;
   width:800px;
   margin:190px auto 0;
   font-size:14px;
}
.check li, .check2 li, .plugins, .gen-descr {
    font-size: 15px;
    font-family:'Droid Sans','Helvetica Neue',Arial,sans-serif;
}
.check li, .check2 li {
    background: url("check.png") no-repeat scroll left center transparent;
    display: inline-block;
    min-height: 25px;
    padding: 0 0 0 20px;
    font-weight: bold;
    line-height: 25px;
    text-align:justify;
}
.check li {
   width:45%;
   float: left;
}
.check2 li {
}

.gen-descr {
   text-align:center;
   display:block;
   margin-top:-30px;
}
.gen-descr ul {
   margin-left:0;
   padding-left:0;
   list-style:none;
}
.menu-speech-bubble
{
   width: 100%;
   background: #EEE;
   color: #fff;
   z-index:30;
   height:37px;
   top:0;
   position:absolute;
   box-shadow: 0 7px 11px #000;
}
.menu-speech-bubble-arrow:after
{
   content: "";
   border: solid 10px transparent; 
   border-top-color: #EEE; 
   border-bottom: 0;
   width: 0;
   display: block;
   position: relative;
   bottom: -1px; 
   margin: auto;
   right:12px;
}

.slider-wrapper {
   width:850px;
   max-width:80%;
   margin:20px auto;
}

.features {
    font-size: 28px;
    font-weight: bold;
    margin-top: 40px;
    text-align: center;
    text-transform: uppercase;
    width: 100%;
  }
.plugins {
   margin:0 auto;
   padding:0;
   list-style:none;
   text-align:center;
   vertical-align:top;
   position:relative;
}
.plugins a {
   color:#FFF;
}
.plugins  li {
   background: rgba(0,0,0,0.4);
   border: 1px solid rgba(255,255,255,0.2);
   position: relative;
   display: inline-block;
   height: 230px;
   margin: auto 5px 10px;
   overflow: hidden;
   position: relative;
   vertical-align: top;
   width: 300px;
}
.themes li {
   border: 3px solid rgba(255,255,255,0.2);
}
.plugins li h2 {
   color:#76daff;
   font-family: "HelveticaNeue-CondensedBold", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", Sans-Serif;
}
.plugins .descr {
   display:block;
   opacity:0;
   background: none repeat scroll 0 0 rgba(0,0,0,0.9);
   height: 100%;
   position: absolute;
   top: 0;
   z-index: 1000;
   width:100%;
}
.plugins p {
   text-align:justify;
   padding:5px;
}
.plugins .meta {
   position:absolute;
   bottom:0;
   height:25px;
   width:100%;
   z-index:6000;
   font-weight:bold;
}
.plugins .name {
   background:rgba(0,0,0,0.7);
   float:left;
   height:25px;
   width:226px;
   padding:5px;
   text-align:left;

}
.plugins .activate {
   cursor: pointer;
}
.plugins .pdl {
   background: url("dl.png") no-repeat scroll 5px 6px rgba(20,20,20,0.7);
   float:right;
   height:25px;
   width:50px;
   padding:4px 1px 0 13px;
   text-transform:uppercase;
   color:#BEB;
   cursor: pointer;
}
.plugins .pdl a {
   text-decoration:none;
   color:#BEB;
}
/*
.plugins > li {
    background: none repeat scroll 0 0 #EEEEEE;
    border-radius: 5px 5px 5px 5px;
    box-shadow: 3px 3px 2px #FFFFFF;
    color: #000000;
    font-size: 12px;
    padding: 10px;
}

.plugins > li.create {
   border: 5px dashed #fbbb4e;
    box-shadow: 0px 0px 0px #FFFFFF;
}

.plugins > li h2 {
   margin:0;
   font-size:14px;
   font-weight: bold;
}

.plugins > li:hover {
    background: none repeat scroll 0 0 #DDD;
}

.plugins img {
    border: medium none;
    left: 15px;
    position: absolute;
    top: 8px;
    transition: all 0.3s ease-in-out 0s;
}
*/

/*
 * Buttons
 */
a.demo-link {
   color:#FFF !important;
   font-weight:bold;
}
.a-btn {
   background:#89BB60;
    background:-webkit-gradient(linear,left top,left bottom,color-stop(#89BB60,0),color-stop(#66953F,1));
    background:-webkit-linear-gradient(top, #89BB60 0%, #66953F 100%);
    background:-moz-linear-gradient(top, #89BB60 0%, #66953F 100%);
    background:-o-linear-gradient(top, #89BB60 0%, #66953F 100%);
    background:linear-gradient(top, #89BB60 0%, #66953F 100%);
    border: 1px solid #80AB5D;
    border-radius: 4px 4px 4px 4px;
    box-shadow: 0 1px 1px rgba(255, 255, 255, 0.8) inset, 1px 1px 3px rgba(0, 0, 0, 0.2);
    clear: both;
    display: inline-block;
    height: 60px;
    margin: 10px 0;
    overflow: hidden;
    padding-left: 10px;
    padding-right: 105px;
    position: relative;
    text-decoration:none;
    color:#FFF;
    font-weight:bold;
    vertical-align:middle;
}
.a-btn img {
    border: medium none;
    left: 15px;
    position: absolute;
    top: 8px;
    transition: all 0.3s ease-in-out 0s;
}
.a-btn-text {
   display: block;
   font-size: 30px;
   padding-top: 2px;
   text-shadow: 0 1px 1px #000000;
   width: 110%;
}
.a-btn-text-dev {
   padding-top: 10px;
}
.a-btn-text small {
    display: block;
    font-size: 11px;
    letter-spacing: 1px;
}
.a-btn-icon-right,.a-btn-icon-rightd {
    border-left: 1px solid #80AB5D;
    box-shadow: 1px 0 1px rgba(255, 255, 255, 0.4) inset;
    height: 100%;
    position: absolute;
    right: 0;
    top: 0;
    width: 80px;
}
.a-btn-icon-right span, .a-btn-icon-rightd span {
    background: url("arrow_down.png") no-repeat scroll center center #4E5C50;
    border: 1px solid rgba(0, 0, 0, 0.5);
    border-radius: 20px 20px 20px 20px;
    box-shadow: 0 1px 1px rgba(255, 255, 255, 0.3) inset, 0 1px 2px rgba(255, 255, 255, 0.5);
    height: 38px;
    left: 50%;
    margin: -20px 0 0 -20px;
    opacity: 0.7;
    position: absolute;
    top: 50%;
    transition: all 0.3s ease-in-out 0s;
    width: 38px;
}
.a-btn:hover {
    box-shadow: 0 1px 1px rgba(255, 255, 255, 0.8) inset, 1px 1px 5px rgba(0, 0, 0, 0.4);
}
.a-btn:hover .a-btn-slide-text, .a-btn:hover .a-btn-icon-right span {
    opacity: 1;
}
.a-btn:active {
    background: none repeat scroll 0 0 #80AB5D;
    border-color: #A9DB80;
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
    position: relative;
    top: 1px;
}
.a-btn:active .a-btn-icon-right span {
    transform: scale(1.4);
}

.dl {
   position:absolute;
   right:9px;
   top:7px;
}
.dl img {
   cursor:pointer;
}

/*
 * Copyright (c) 2012-2013 Thibaut Courouble
 * http://www.cssflow.com
 *
 * Licensed under the MIT License:
 * http://www.opensource.org/licenses/mit-license.php
 */

.nav {
  text-align: center;
  margin: 0px auto;
  padding: 4px 0 0;
  overflow:hidden;
}
.nav ul {
  border:1px solid #D2D2D2;
  margin:0;
  padding:0;
  display: inline-block;
  vertical-align: baseline;
  *display: inline;
  *vertical-align: auto;
  list-style: none;
}
.nav li {
  float: left;
  border-left: 1px solid #d2d2d2;
}
.nav li:first-child {
  border-left: 0;
}
.nav li:first-child a {
  border-radius: 3px 0 0 3px;
}
.nav li:last-child a {
  border-radius: 0 3px 3px 0;
}
.nav a {
  cursor:pointer;
  display: block;
  position: relative;
  padding: 0 14px;
  height: 26px;
  line-height: 26px;
  font-size: 13px;
  font-weight: bold;
  color: #666;
  text-decoration: none;
  text-shadow: 0 1px white;
  background: #fafafa;
  background-image: -webkit-linear-gradient(top, #fcfcfc, #f0f0f0);
  background-image: -moz-linear-gradient(top, #fcfcfc, #f0f0f0);
  background-image: -o-linear-gradient(top, #fcfcfc, #f0f0f0);
  background-image: linear-gradient(to bottom, #fcfcfc, #f0f0f0);
  -webkit-box-shadow: inset 0 0 0 1px #fafafa;
  box-shadow: inset 0 0 0 1px #fafafa;
  padding:0 40px;
}
.nav a:hover {
  color: #333;
  z-index: 2;
  -webkit-box-shadow: inset 0 0 0 1px #fafafa, 0 0 3px rgba(0, 0, 0, 0.3);
  box-shadow: inset 0 0 0 1px #fafafa, 0 0 3px rgba(0, 0, 0, 0.3);
}
.nav li.active a, .nav a:active {
  color: #333;
  background: white;
  -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1);
  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1);
}


/*
Skin Name: Nivo Slider Default Theme
Skin URI: http://nivo.dev7studios.com
Skin Type: flexible
Description: The default skin for the Nivo Slider.
Version: 1.2
Author: Gilbert Pellegrom
Author URI: http://dev7studios.com
*/

.theme-default .nivoSlider {
	position:relative;
	background:#fff url(loading.gif) no-repeat 50% 50%;
   border:5px solid #252525;
   box-shadow:0 0 118px #444444
}
.theme-default .nivoSlider img {
	position:absolute;
	top:0px;
	left:0px;
	display:none;
}
.theme-default .nivoSlider a {
	border:0;
	display:block;
}

.theme-default .nivo-controlNav {
	text-align: center;
	padding: 5px 0;
}
.theme-default .nivo-controlNav a {
	display:inline-block;
	width:22px;
	height:22px;
	background:url(bullets.png) no-repeat;
	text-indent:-9999px;
	border:0;
	margin: 0 2px;
}
.theme-default .nivo-controlNav a.active {
	background-position:0 -22px;
}

.theme-default .nivo-directionNav a {
	display:block;
	width:30px;
	height:30px;
	background:url(arrows.png) no-repeat;
	text-indent:-9999px;
	border:0;
}
.theme-default a.nivo-nextNav {
	background-position:-30px 0;
	right:15px;
}
.theme-default a.nivo-prevNav {
	left:15px;
}

.theme-default .nivo-caption {
    font-family: Helvetica, Arial, sans-serif;
    font-weight:bold;
    text-align:center;
}
.theme-default .nivo-caption a {
    color:#fff;
    border-bottom:1px dotted #fff;
}
.theme-default .nivo-caption a:hover {
    color:#fff;
}

.theme-default .nivo-controlNav.nivo-thumbs-enabled {
	width: 100%;
}
.theme-default .nivo-controlNav.nivo-thumbs-enabled a {
	width: auto;
	height: auto;
	background: none;
	margin-bottom: 5px;
}
.theme-default .nivo-controlNav.nivo-thumbs-enabled img {
	display: block;
	width: 120px;
	height: auto;
}


/*
 * jQuery Nivo Slider v3.0
 * http://nivo.dev7studios.com
 *
 * Copyright 2012, Dev7studios
 * Free to use and abuse under the MIT license.
 * http://www.opensource.org/licenses/mit-license.php
 */
 
/* The Nivo Slider styles */
.nivoSlider {
	position:relative;
	width:100%;
	height:auto;
	overflow: hidden;
}
.nivoSlider img {
	position:absolute;
	top:0px;
	left:0px;
}
.nivo-main-image {
	display: block !important;
	position: relative !important; 
	width: 100% !important;
}

/* If an image is wrapped in a link */
.nivoSlider a.nivo-imageLink {
	position:absolute;
	top:0px;
	left:0px;
	width:100%;
	height:100%;
	border:0;
	padding:0;
	margin:0;
	z-index:6;
	display:none;
}
/* The slices and boxes in the Slider */
.nivo-slice {
	display:block;
	position:absolute;
	z-index:5;
	height:100%;
	top:0;
}
.nivo-box {
	display:block;
	position:absolute;
	z-index:5;
	overflow:hidden;
}
.nivo-box img { display:block; }

/* Caption styles */
.nivo-caption {
	position:absolute;
	left:0px;
	bottom:0px;
	background:#000;
	color:#fff;
	width:100%;
	z-index:8;
	padding: 5px 10px;
	opacity: 0.9;
	overflow: hidden;
	display: none;
	-moz-opacity: 0.8;
	filter:alpha(opacity=8);
	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
	box-sizing: border-box;         /* Opera/IE 8+ */
}
.nivo-caption p {
	padding:5px;
	margin:0;
}
.nivo-caption a {
	display:inline !important;
}
.nivo-html-caption {
    display:none;
}
/* Direction nav styles (e.g. Next & Prev) */
.nivo-directionNav a {
	position:absolute;
	top:45%;
	z-index:9;
	cursor:pointer;
}
.nivo-prevNav {
	left:0px;
}
.nivo-nextNav {
	right:0px;
}
/* Control nav styles (e.g. 1,2,3...) */
.nivo-controlNav {
	text-align:center;
	padding: 5px 0;
}
.nivo-controlNav a {
	cursor:pointer;
}
.nivo-controlNav a.active {
	font-weight:bold;
}

